<resources>
    <string name="app_name">QuizApp</string>
    <string name="quizAppName">Quiz App</string>
    <string name="your_name">Type your name</string>
    <string name="getStartedButton">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quizStartQuiz">Quiz</string>
    <string name="nr_of_questions">nr of Questions</string>
    <string name="quiz_result">Quiz result</string>
    <string name="try_again">Try again</string>
    <string name="nav_drawer_menu1">Home</string>
    <string name="nav_drawer_menu2">Quiz time</string>
    <string name="nav_drawer_menu3">Profile</string>
    <string name="nav_drawer_menu4">List of questions</string>
    <string name="nav_drawer_menu5">New questions</string>
    <string name="header_title">Menu options</string>
    <string name="header_text">Enjoy the quiz</string>
    <string name="top_app_bar">Quiz app</string>
    <string name="edit">edit</string>
    <string name="content_description_search">cd search</string>
    <string name="more">more</string>
    <string name="content_description_more">cd more</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="homeTextView">Enjoy the quiz app, where you can</string>
    <string name="homeTestYourSkillsButton">Test your skills</string>
    <string name="homeReadQuestionsButton">Read questions</string>
    <string name="homeCreateQuestionButton">Create question</string>
    <string name="profilePlayerNameTextView">Player name:</string>
    <string name="profilePlayerNameShowTextView">TextView</string>
    <string name="profileHighScoreTextView">High score:</string>
    <string name="profileHighScoreShowTextView">TextView</string>
    <string name="newQuestionAddQuestionButton">Add question</string>
    <string name="newQuestionQuestionEditText">Question</string>
    <string name="newQuestionCorrectAnswerEditText">Correct answer</string>
    <string name="newQuestionIncorrectAnswersTextView">Answer</string>
</resources>