<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:showIn="navigation_view"
        >
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item1"
            android:checked="true"
            android:icon="@drawable/ic_home_light"
            android:title="@string/nav_drawer_menu1" />
        <item
            android:id="@+id/item2"
            android:icon="@drawable/ic_quiztime_light"
            android:title="@string/nav_drawer_menu2" />
        <item
            android:id="@+id/item3"
            android:icon="@drawable/ic_profile_light"
            android:title="@string/nav_drawer_menu3" />
        <item
            android:id="@+id/item4"
            android:icon="@drawable/ic_list_light"
            android:title="@string/nav_drawer_menu4" />
        <item
            android:id="@+id/item5"
            android:icon="@drawable/ic_add_light"
            android:title="@string/nav_drawer_menu5" />

    </group>

</menu>