<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.navmenu.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="244dp"
            android:layout_height="171dp"
            android:layout_marginTop="64dp"
            android:src="@mipmap/ic_quizapp_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/homeTextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/homeTestYourSkillsButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/homeTestYourSkillsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

        <Button
            android:id="@+id/homeReadQuestionsButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/homeReadQuestionsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTestYourSkillsButton" />

        <Button
            android:id="@+id/homeCreateQuestionButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/homeCreateQuestionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeReadQuestionsButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>